--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Customizing Bootstrap</title>
   <link rel="stylesheet" href="css/custom.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Source+Sans+3&display=swap');
+    </style>    
 </head>
 <body class="bg-light">
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg bg-dark" data-bs-theme="dark">
       <div class="container px-4">
         <a class="navbar-brand" href="#">Company logo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +67,7 @@
             <div>
               <h3>Primary</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #a04add;">
                 Primary button
               </a>
             </div>
@@ -73,7 +76,7 @@
             <div>
               <h3>Secondary</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #3B53C7; border: #3B53C7;">
                 Secondary button
               </a>
             </div>
@@ -82,7 +85,7 @@
             <div>
               <h3>Success</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #A4D882; border: #A4D882; color:black;">
                 Success button
               </a>
             </div>
