--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div>
               <h3>Info</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #59C1EF; border: #59C1EF; color:black;">
                 Info button
               </a>
             </div>
@@ -103,7 +103,7 @@
             <div>
               <h3>Warning</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #FFF689; border: #FFF689; color:black;">
                 Warning button
               </a>
             </div>
@@ -112,7 +112,7 @@
             <div>
               <h3>Danger</h3>
               <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-              <a href="#" class="btn btn-primary">
+              <a href="#" class="btn btn-primary" style="background-color: #E5446D; border: #E5446D; color:black;">
                 Danger button
               </a>
             </div>
@@ -167,7 +167,7 @@
   </main>
 
 
-  <footer class="py-3">
+  <footer class="py-3 bg-dark text-light">
     <div class="container">
       <p class="text-center">&copy; 2023 Company, Inc. All rights reserved.</p>
     </div>  
